v0.3.2 (6th September 2010)
- fix importing of PDF files as images
  - always imports the first page, currently no support for importing the
    second or subsequent pages

v0.3.1 (24th November 2009)
- avoid errors being printed to stderr when rendering tables
- allow manual page sizes to be specified

v0.3.0 (15th October 2009)
- remove some deprecated functions from Table
- added support for table cells with text and images
- no API incompatible changes to 0.2.1

v0.2.1 (18th November 2008)
- Small bugfix to prevent unnecesary STDERR output by pango

v0.2.0 (15th September 2008)
- API INCOMPATIBLE CHANGE: render() and render_file() are now deprecated.
  - Use the output parameter of the constructor instead
  - In versions before this, we automatically rendered to a StringIO object. This kept
    things simple, but isn't great for scalability. Better to give the user the option
    of bypassing memory and rendering direct to disk.
  - Particuarly useful in rails apps to avoid the memory footprint of mongrels
    blowing out
- Added Wrapper#open()

v0.1.5 (Unreleased)
- Fix text wrapping that crosses page boundaries
  - when a new page is started as a result of a text() call, the text
    should continue at the top of the next page, not the y value the
    text started at

v0.1.4 (Unreleased)
- Wrapper#font_size now accepts a block for temporary font size changes
- Allow the page size to be changed when starting a new page
- Added support for manually setting table column widths
  - prevents the column widths from growing or shrinking automatically
- Deprecated Table#table_options in favour of passing options to Table#new
  - Thanks to Zubin Henner for the suggestion
- Deprecated Table#header_options and Table#headers= in favour of a new method
  that can be used to specify both the content and options of the header row.
  - Thanks to Zubin Henner for the suggestion

v0.1.3 (24th July 2008)
- Require the gem version of cairo